--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img src="assets/HRHiveHero.png" class="hero-image d-block mx-lg-auto img-fluid" alt="HR Hive Logo" loading="lazy">
                 </div>
                 <div class="col-lg-6 hero-right">
-                    <h1 class="my-4">Get a </h1>
+                    <h1 class="my-4">Get a grip on it </h1>
                     <h3 class="my-4">You're a HR professional, but you can't know everything at once. If you're feeling a little overwhelmed by the buzzing of your workforce, you might need a tool or two to help you get back on top of it.</h3><br>
                     <h3>We think <span style="font-weight: bold;">HR Hive</span> can help. <a href="#Learn-more" style="color: var(--OffBlack)">Learn more.</a></h3>
                 </div>
